[gd_scene load_steps=2 format=3 uid="uid://hnlg8bdiog3k"]

[ext_resource type="Script" uid="uid://17un2cjdtgde" path="res://scripts/Main.gd" id="1"]

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="Maze" type="TileMap" parent="."]
format = 2

[node name="UI" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
anchors_preset = 10
anchor_right = 1.0

[node name="StarLabel" type="Label" parent="UI/HBoxContainer"]
layout_mode = 2
text = "Stars: 0"

[node name="KeyLabel" type="Label" parent="UI/HBoxContainer"]
layout_mode = 2
text = "Keys: 0"

[node name="RestartButton" type="Button" parent="UI/HBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="NextButton" type="Button" parent="UI/HBoxContainer"]
layout_mode = 2
disabled = true
text = "Next"
